Use Kafka-native image
RedPanda does not allow to clear topics, so the only option was to delete topics.
But sometimes this caused issues in Quarkus (messages not received correctly).

Kafka-native starts fast too and supports the DELETE operation.